# KronosXPredict

./: CMakeLists.txt  README.md
apps/: torch_demo_main.cpp
cmake/: KronosPredictConfig.cmake.in  KronosXPredictConfig.cmake.in
example-app/: CMakeLists.txt  example-app.cpp
include/KronosPredict/: api.hpp  plugin.hpp  plugin_loader.hpp  runtime.hpp  training.hpp
include/KronosXPredict/: api.hpp  plugin.hpp  plugin_loader.hpp  runtime.hpp  training.hpp
plugins/stub/: CMakeLists.txt  stub_plugin.cpp
python/: CMakeLists.txt  bindings.cpp  torch_demo_test.py
scripts/: unzipIt.sh  zipIt.sh
src/: plugin_loader.cpp  runtime.cpp  torch_demo.cpp
tests/: CMakeLists.txt  test_plugin_loader.cpp  test_stub_model.cpp  test_torch_demo.cpp
